--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
 annotated-types==0.6.0
-anyio==4.2.0
+anyio==4.3.0
 certifi==2024.2.2
-cffi==1.16.0
 charset-normalizer==3.3.2
-cryptography==42.0.3
+click==8.1.7
 exceptiongroup==1.2.0
-fastapi==0.109.2
+fastapi==0.110.0
+gitdb==4.0.11
+GitPython==3.1.42
+h11==0.14.0
 idna==3.6
-jwt==1.3.1
-pycparser==2.21
-pydantic==2.6.1
-pydantic-core==2.16.2
-python-sonarqube-api==2.0.4
+pydantic==2.6.2
+pydantic-core==2.16.3
+PyYAML==6.0.1
 requests==2.31.0
-sniffio==1.3.0
+smmap==5.0.1
+sniffio==1.3.1
 starlette==0.36.3
-typing-extensions==4.9.0
+typing-extensions==4.10.0
 urllib3==2.2.1
+uvicorn==0.27.1
