--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 exceptiongroup==1.2.0
+Faker==23.3.0
 fastapi==0.110.0
 gitdb==4.0.11
 GitPython==3.1.42
@@ -11,8 +12,10 @@ h11==0.14.0
 idna==3.6
 pydantic==2.6.2
 pydantic-core==2.16.3
+python-dateutil==2.8.2
 PyYAML==6.0.1
 requests==2.31.0
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 starlette==0.36.3
